@@ -60,24 +60,24 @@ typedef struct {
 } coord_t;
 
 typedef enum {
-    SOURCE_NULL,
-    SOURCE_OPENSTREETMAP,
-    SOURCE_OPENSTREETMAP_RENDERER,
-    SOURCE_OPENAERIALMAP,
-    SOURCE_MAPS_FOR_FREE,
-    SOURCE_GOOGLE_STREET,
-    SOURCE_GOOGLE_SATELLITE,
-    SOURCE_GOOGLE_HYBRID,
-    SOURCE_VIRTUAL_EARTH_STREET,
-    SOURCE_VIRTUAL_EARTH_SATELLITE,
-    SOURCE_VIRTUAL_EARTH_HYBRID,
-    SOURCE_YAHOO_STREET,
-    SOURCE_YAHOO_SATELLITE,
-    SOURCE_YAHOO_HYBRID
+    OSM_GPS_MAP_SOURCE_NULL,
+    OSM_GPS_MAP_SOURCE_OPENSTREETMAP,
+    OSM_GPS_MAP_SOURCE_OPENSTREETMAP_RENDERER,
+    OSM_GPS_MAP_SOURCE_OPENAERIALMAP,
+    OSM_GPS_MAP_SOURCE_MAPS_FOR_FREE,
+    OSM_GPS_MAP_SOURCE_GOOGLE_STREET,
+    OSM_GPS_MAP_SOURCE_GOOGLE_SATELLITE,
+    OSM_GPS_MAP_SOURCE_GOOGLE_HYBRID,
+    OSM_GPS_MAP_SOURCE_VIRTUAL_EARTH_STREET,
+    OSM_GPS_MAP_SOURCE_VIRTUAL_EARTH_SATELLITE,
+    OSM_GPS_MAP_SOURCE_VIRTUAL_EARTH_HYBRID,
+    OSM_GPS_MAP_SOURCE_YAHOO_STREET,
+    OSM_GPS_MAP_SOURCE_YAHOO_SATELLITE,
+    OSM_GPS_MAP_SOURCE_YAHOO_HYBRID
 } OsmGpsMapSource_t;
 
 GType osm_gps_map_get_type (void) G_GNUC_CONST;
-const char* osm_gps_map_get_repo_uri(OsmGpsMapSource_t source);
+const char* osm_gps_map_source_get_repo_uri(OsmGpsMapSource_t source);
 
 void osm_gps_map_download_maps (OsmGpsMap *map, coord_t *pt1, coord_t *pt2, int zoom_start, int zoom_end);
 void osm_gps_map_get_bbox (OsmGpsMap *map, coord_t *pt1, coord_t *pt2);
